--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ bundler_args: --without development
 rvm:
   - 2.2.4
   - jruby-9.0.5.0
-before_install: gem install bundler -v 1.12.0.rc.4
+before_install: gem install bundler -v 1.12.1
