--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,11 @@ rvm:
   - 2.2.5
   - 2.3.1
   - jruby-9.1.2.0
+
+matrix:
+  include:
+    - rvm: jruby-9.1.2.0
+      env: JRUBY_OPTS='--server -Xcompile.invokedynamic=false'
+
 before_install: gem install bundler -v 1.12.5
 cache: bundler
