--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 sudo: false
 language: ruby
 bundler_args: --without development
-env: JRUBY_OPTS='--server -Xcompile.invokedynamic=false'
+env:
+  global:
+    - JRUBY_OPTS='--server -Xcompile.invokedynamic=false'
+    - _JAVA_OPTIONS=
 rvm:
   - 2.2.5
   - 2.3.1
@@ -9,7 +12,5 @@ rvm:
   - jruby-9.1.8.0
 
 before_install: gem install bundler -v 1.12.5
-before_script:
-  - _JAVA_OPTIONS=
 
 cache: bundler
